# worker

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  RELEASING.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  redteam.yml  release.yml
debian/: auspexai-worker.dirs  auspexai-worker.install  auspexai-worker.links  auspexai-worker.postinst  auspexai-worker.postrm  auspexai-worker.prerm  changelog  control  copyright  rules
packaging/: build-deb.sh  cloudflare-worker.js  install.sh  wrangler.toml
packaging/apparmor/: auspexai-worker
packaging/systemd/: auspexai-worker.service
packaging/systemd-deb/: auspexai-worker.service
src/auspexai_worker/: __init__.py  accelerator.py  bootstrap.py  cli.py  config.py  health.py  provisioning.py  service.py  updates.py  worker_state.py
src/auspexai_worker/assignment/: __init__.py  gate.py
src/auspexai_worker/capabilities/: __init__.py  detect.py
src/auspexai_worker/coordinator/: __init__.py  client.py
src/auspexai_worker/daemon/: __init__.py  advisory_recovery.py  assignment_loop.py  dispatch.py  loop.py  prestage_loop.py
src/auspexai_worker/dashboard/: __init__.py  app.py  server.py  templates.py
src/auspexai_worker/inference/: __init__.py  backend.py  broker.py  policy.py  server.py
src/auspexai_worker/keystore/: __init__.py  base.py  encrypted_file.py  factory.py  in_memory.py  secret_service.py
src/auspexai_worker/models/: __init__.py  catalog.py  download_progress.py  fetch.py  hf_browse.py  recommend.py  seed_catalog.json  store.py
src/auspexai_worker/oauth/: __init__.py  device_flow.py
src/auspexai_worker/runner/: __init__.py  executor.py  main.py
src/auspexai_worker/sandbox/: __init__.py  resources.py  seccomp.py  wrapper.py
src/auspexai_worker/signing/: __init__.py  result.py  signer.py
src/auspexai_worker/state/: __init__.py  db.py  m3_repositories.py  repository.py
src/auspexai_worker/state/migrations_sql/: 0001_init.sql  0002_m3.sql  0003_m4.sql  0004_m5.sql  0005_m6_tail.sql  0006_holds.sql  0007_latest_release.sql  0008_pending_by_assignment.sql  0009_served_weights.sql  0010_ran_under.sql  0011_no_receipt_note.sql  0012_serve_advisory.sql  0013_serve_advisory_headline.sql  0014_serve_advisory_kind.sql
src/auspexai_worker/workspace/: __init__.py  paths.py
tests/: _signature_oracle.py  conftest.py  test_accelerator.py  test_advisory_recovery.py  test_assignment_gate.py  test_assignment_poller.py  test_bootstrap.py  test_capabilities.py  test_cli.py  test_cli_daemon.py  test_cli_flavor.py  test_cli_m3.py  test_cli_m5.py  test_cli_m6.py  test_cli_self_pause.py  test_config.py  test_coordinator_client.py  test_coordinator_m6.py  test_daemon_loop.py  test_dashboard.py  test_dispatcher.py  test_download_progress.py  test_executor_dispatch.py  test_fetch_concurrency.py  test_generation_policy.py  test_health.py  test_heartbeat_client.py  test_hf_browse.py  test_inference_broker.py  test_inference_server.py  test_keystore.py  test_m3_repositories.py  test_m5_receipts.py  test_m6_tail.py  test_m7_tail.py  test_models.py  test_oauth_device_flow.py  test_package_autofetch.py  test_prestage_loop.py  test_provisioning.py  (+13 more)
