[project]
name = "auspexai-worker"
dynamic = ["version"]
description = "Volunteer worker daemon for the AuspexAI distributed compute network"
readme = "README.md"
license = "AGPL-3.0-only"
license-files = ["LICENSE"]
requires-python = ">=3.11"
authors = [
    { name = "AuspexAI Maintainers", email = "contact@auspexai.network" },
]
keywords = ["auspexai", "distributed-compute", "ai-safety", "research", "worker", "volunteer"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "pydantic>=2.5",
    "click>=8.1",
    "cryptography>=42",
    "httpx>=0.27",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "respx>=0.21",
    "ruff==0.15.15",
    # Pinned for the test env: starlette>=1.2 deprecates httpx in TestClient,
    # which trips filterwarnings=error during test collection. fastapi 0.115.6
    # pulls a compatible starlette<0.42. Dependabot will propose bumps.
    "fastapi==0.115.6",
    "starlette<0.42",
]
# Optional libsecret/Secret Service backend. Skipped on headless CI / containers
# without a running Secret Service provider; worker falls back to encrypted file.
secret-service = [
    "SecretStorage>=3.3",
]

[project.scripts]
auspexai-worker = "auspexai_worker.cli:main"
auspexai-worker-runner = "auspexai_worker.runner:main"

[project.urls]
Homepage = "https://auspexai.network"
Repository = "https://github.com/auspexai/worker"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

# Version derived from git tags (hatch-vcs), stamped at build. Releases are cut
# from a tag (e.g. v0.1.8) → clean version; builds between tags get a .devN
# suffix. __init__ already reads it from installed metadata. See
# version_provenance.md (V-M1).
[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.wheel]
packages = ["src/auspexai_worker"]

[tool.hatch.build.targets.wheel.force-include]
"src/auspexai_worker/state/migrations_sql" = "auspexai_worker/state/migrations_sql"

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
    "/packaging",
    "/README.md",
    "/LICENSE",
    "/pyproject.toml",
]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "W",   # pycodestyle warnings
    "I",   # isort
    "N",   # pep8-naming
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "RUF", # ruff-specific
]
ignore = [
    "E501",  # line too long (formatter handles)
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["B011", "N802"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
filterwarnings = [
    "error",
]
