[project]
name = "auspexai-worker"
dynamic = ["version"]
description = "Volunteer worker daemon for the AuspexAI distributed compute network"
readme = "README.md"
license = "AGPL-3.0-only"
license-files = ["LICENSE"]
requires-python = ">=3.11"
authors = [
    { name = "AuspexAI Maintainers", email = "contact@auspexai.network" },
]
keywords = ["auspexai", "distributed-compute", "ai-safety", "research", "worker", "volunteer"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "pydantic>=2.5",
    "click>=8.1",
    "cryptography>=42",
    "httpx>=0.27",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "respx>=0.21",
    "ruff==0.15.15",
    # §9 #47 harness-seam test: the REAL SDK ExecutorHarness driven through the
    # worker dispatch path (the 2026-06-08 audit's critical-finding seam —
    # fixture executors validate our BELIEFS about the SDK contract; this dep
    # lets one test validate the contract itself). Pinned to the released tag;
    # bump deliberately when the SDK releases. Dev-only: the worker RUNTIME
    # never depends on tenant-sdk.
    "auspexai-tenant @ git+https://github.com/auspexai/tenant-sdk.git@v0.5.0",
    # Test env pinned to current fastapi/starlette. starlette 1.x's TestClient
    # emits a DeprecationWarning that filterwarnings=error would escalate to a
    # collection error — handled by a targeted ignore in [tool.pytest.ini_options]
    # below rather than holding the dependency back.
    "fastapi==0.136.3",
    "starlette<1.3",
]
# Optional libsecret/Secret Service backend. Skipped on headless CI / containers
# without a running Secret Service provider; worker falls back to encrypted file.
secret-service = [
    "SecretStorage>=3.3",
]
# Optional model-acquisition backend (W-M onramp). Only `auspexai-worker model
# pull` needs it; a host that only runs already-staged models stays lean.
# Lazily imported in HfHubFetcher with a clear error if absent.
models = [
    "huggingface_hub>=0.20",
]

[project.scripts]
auspexai-worker = "auspexai_worker.cli:main"
auspexai-worker-runner = "auspexai_worker.runner:main"

[project.urls]
Homepage = "https://auspexai.network"
Repository = "https://github.com/auspexai/worker"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

# Version derived from git tags (hatch-vcs), stamped at build. Releases are cut
# from a tag (e.g. v0.1.8) → clean version; builds between tags get a .devN
# suffix. __init__ already reads it from installed metadata. See
# version_provenance.md (V-M1).
[tool.hatch.metadata]
# Needed only for the DEV-extra git reference to tenant-sdk (the §9 #47
# harness-seam test); the runtime dependency set has no direct references.
allow-direct-references = true

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.wheel]
# `packages` already includes the package's non-.py data (the tracked
# migrations_sql/*.sql + models/seed_catalog.json) — a redundant force-include
# of migrations_sql double-added every .sql, which newer hatchling (pulled by
# `uv build`) hard-errors on (older silently deduped). Rely on the default.
packages = ["src/auspexai_worker"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
    "/packaging",
    "/README.md",
    "/LICENSE",
    "/pyproject.toml",
]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "W",   # pycodestyle warnings
    "I",   # isort
    "N",   # pep8-naming
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "RUF", # ruff-specific
]
ignore = [
    "E501",  # line too long (formatter handles)
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["B011", "N802"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
filterwarnings = [
    "error",
    # starlette 1.x's TestClient deprecates the `httpx` transport in favour of
    # `httpx2`; the warning fires at import of starlette.testclient and would
    # otherwise fail collection under `error`. Ignore this one third-party
    # deprecation (the app's own httpx usage is unaffected).
    "ignore:Using `httpx` with `starlette.testclient` is deprecated:starlette.exceptions.StarletteDeprecationWarning",
]
